se agregaron test unitarios a cada metodo de los endpoints y un pruba de integracion, se modifico los docstrings para la documentacion de swagger para mas detalles
