# swagger.yml
@@ -34,6 +34,11 @@ paths:
           description: Error al obtener los datos de la base de datos
   /taxis/{taxi_id}/locations:
     get:
+      tags:
+      - Localizaciones
+      summary: Lista de todas las localizaciones segun ID y fecha
+      description: Listado de todas las localizaciones segun ID y fecha
+      operationId: getTaxiLocations
       parameters:
       - in: path
         name: taxi_id
@@ -59,6 +64,11 @@ paths:
           description: Error al obtener los datos de la base de datos
   /taxis/{taxi_id}/last-location:
     get:
+      tags:
+      - Ultima localizacion
+      summary: Muestra la ultima localizacion de un taxi segun ID
+      description: Listado de la ultima localizacion de un taxi segun ID
+      operationId: getLastLocation
       parameters:
       - in: path
         name: taxi_id
